k8s/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: demo-app
spec:
  replicas: 3
